[project]
name = "super-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prefect>=3.2.2",
    "clickhouse-driver>=0.2.1",
    "pandas>=2.1.1",
    "python-dotenv>=1.0.1",
    "prefect-dbt>=0.1.1",
    "requests>=2.0.0",
    "web3>=7.8.0",
    "dbt-core>=1.9.2",
    "dbt-clickhouse>=1.7.0"
]
